# Coinsnap-for-pretix

./: MANIFEST.in  README.md  models.py  payment.py  pretixplugin.toml  setup.py  signals.py  urls.py
coinsnap/: LICENSE  Makefile  README.md  README.rst  __init__.py  apps.py  models.py  payment.py  pyproject.toml  setup.cfg  views.py
coinsnap/locale/de/LC_MESSAGES/: django.po
coinsnap/migrations/: 0001_initial.py
coinsnap/templates/coinsnap/: checkout_payment_confirm.html  checkout_payment_form.html
migrations/: 0002_coinsnapwebhookstate.py  0003_coinsnapwebhookstate_secret.py
